Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-7182

TcpSslConn.cpp does not compile with gcc 8.3

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.10.0
    • native client
    • None

    Description

      I tried to build native client using:
      $ gcc --version
      gcc (Debian 8.3.0-6) 8.3.0
      $ cmake --version
      cmake version 3.13.4
      $ openssl version
      OpenSSL 1.1.1c  28 May 2019

      and got:
      cppcache/src/TcpSslConn.cpp:60: error: catching polymorphic type 'class std::exception' by value

      The BUILDING.md states that I should be able to use "GCC 5 or newer".

      Fixing the code to resolve this warning is a straightforward 1-character change and a good idea anyway even if the official pipelines continue to compile using older compilers that don't generate this warning yet.

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              onichols Owen Nichols
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h