GEODE-7182: fix a warning in TcpSslConn.cpp that prevents successful compilation on gcc 8.3 (#515)

(cherry picked from commit 9b1c5ab31558c9d0ead6927398cb608521a5c20d)